--- a/index.html
+++ b/index.html
@@ -1,54 +1,38 @@
 <!DOCTYPE html>
 <html>
-<div class="container">
+<div class="container1">
 <head>
     <meta charset="utf-8">
     <meta name="description" content="Cookbook: Eesti maitsvaim retseptiveeb">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>COOKBOOK</title>
-
-    <link rel="stylesheet" href="style.css" />
+    <link href="style.css" rel="stylesheet"/>
 </head>
 
 <body>
 
 <header>
-    <div class="logo">
-    <section class="header-banner">
-        <h1>COOKBOOK</h1>
-        <h2>EESTI MAITSVAIM RETSEPTIVEEB</h2>
-        <div class ="header-pic">
-            <img src="header.jpg">
-        </div>
-    </section>
-
-    </div>
-
-    <div class="joon">
-        <hr>
-    </div>
-
-    <nav>
-        <ul>
-            <li><a href="#">RETSEPTID</a></li>
-            <li><a href="#">VÕTA ÜHENDUST</a></li>
-        </ul>
-    </nav>
+    <h1>COOKBOOK</h1>
+    <h2 class="header-banner">EESTI MAITSVAIM RETSEPTIVEEB</h2>
+    <hr>
 </header>
 
 <main>
+    <nav>
+        <a href="#">RETSEPTID</a>
+        <a href="#">VÕTA ÜHENDUST</a>
+    </nav>
 
+    <article class="header-pic"></article>
 
-    <div class="index-header">
-        <h2 class="gallery-h2">Meist</h2>
-        <p>
-            <div class="disclaimer">
-            <img src="kokad.jpg" align="right" width="600px" >
-            </div>
-            In scelerisque urna quis rhoncus bibendum. Nunc elementum sem et varius tempor. Morbi nulla mauris, ornare non condimentum vulputate, accumsan non tellus. Phasellus pulvinar lorem sit amet lectus tempor, vitae mattis justo pharetra. Sed lacinia at quam rhoncus pharetra. Ut vestibulum tempus arcu id fringilla. Curabitur vel mauris finibus, laoreet lorem eget, ultricies ligula. Quisque eget posuere est, vel ullamcorper ligula. Vivamus accumsan pretium scelerisque. Nam commodo volutpat nibh nec lacinia. Nam convallis neque sit amet justo feugiat dignissim. Quisque magna erat, interdum a scelerisque et, gravida vitae nibh. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque posuere, eros mattis elementum efficitur, eros lorem dapibus quam, eu maximus velit lacus vitae leo. Integer tincidunt et orci vel bibendum. Nulla bibendum nunc vitae justo finibus pulvinar.</p>
-        <p>Nam purus ante, vehicula sit amet erat quis, finibus placerat justo. Phasellus a facilisis nibh. Nam porta quis ipsum et volutpat. Cras lorem purus, pretium id arcu nec, imperdiet tincidunt arcu. Ut viverra cursus purus, et tincidunt ligula faucibus eu. Pellentesque semper enim vel interdum bibendum. Curabitur tincidunt orci odio, eu bibendum sem hendrerit ut. Duis tristique arcu neque, et varius ex posuere quis. Etiam quis eros lectus. Vestibulum luctus, purus a interdum hendrerit, sapien sapien luctus nisl, ut rhoncus est elit sit amet tortor. Duis interdum non velit sed blandit.</p>
-    </div>
+        <h2 class="meist_pealkiri">MEIST</h2>
+        <article class="meist">
+            <section>
+                <p><img src="kokad.jpg" align="right" height="200px"> Scelerisque urna quis rhoncus bibendum. Nunc elementum sem et varius tempor. Morbi nulla mauris, ornare non condimentum vulputate, accumsan non tellus. Phasellus pulvinar lorem sit amet lectus tempor, vitae mattis justo pharetra. Sed lacinia at quam rhoncus pharetra. Ut vestibulum tempus arcu id fringilla. Curabitur vel mauris finibus, laoreet lorem eget, ultricies ligula. Quisque eget posuere est, vel ullamcorper ligula. Vivamus accumsan pretium scelerisque. Nam commodo volutpat nibh nec lacinia. Nam convallis neque sit amet justo feugiat dignissim. Quisque magna erat, interdum a scelerisque et, gravida vitae nibh. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque posuere, eros mattis elementum efficitur, eros lorem dapibus quam, eu maximus velit lacus vitae leo. Integer tincidunt et orci vel bibendum. Nulla bibendum nunc vitae justo finibus pulvinar.</p>
+                <p>Nam purus ante, vehicula sit amet erat quis, finibus placerat justo. Phasellus a facilisis nibh. Nam porta quis ipsum et volutpat. Cras lorem purus, pretium id arcu nec, imperdiet tincidunt arcu. Ut viverra cursus purus, et tincidunt ligula faucibus eu. Pellentesque semper enim vel interdum bibendum. Curabitur tincidunt orci odio, eu bibendum sem hendrerit ut. Duis tristique arcu neque, et varius ex posuere quis. Etiam quis eros lectus. Vestibulum luctus, purus a interdum hendrerit, sapien sapien luctus nisl, ut rhoncus est elit sit amet tortor. Duis interdum non velit sed blandit.</p>
+            </section>
+        </article>
 
     <section class="gallery-links">
 
@@ -82,7 +66,6 @@
         <a href="#"><img src="instagram-32.png" alt="instagram" /></a>
     </div>
 </footer>
-
 </body>
 </div>
 </html>
